syntax = "proto3";
package flux.messages;

import "google/protobuf/timestamp.proto";

service MessagesService {
    rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse);
    rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
}

message CreateMessageRequest {
    optional string text = 1;
    optional string message_id = 2;
    optional string user_id = 3;
    optional string code = 4;
}

message CreateMessageResponse {
    optional string message_id = 1;
}

message GetMessageRequest {
    optional string message_id = 101;
    optional string cursor_message_id = 102;
    optional int64 limit = 103;
}

message GetMessageResponse {
    optional string cursor_message_id = 1;

    optional Message message = 501;
    repeated Message messages = 502;

    message Message {
        optional string message_id = 101;
        optional string user_id = 102;
        optional string text = 103;
        optional string stream_id = 104;
        optional string code = 105;
        optional int64 order = 106;

        optional google.protobuf.Timestamp created_at = 901;
        optional google.protobuf.Timestamp updated_at = 902;
    }
}
